--- a/page_assets/css/style.css
+++ b/page_assets/css/style.css
@@ -2,3 +2,12 @@
 @import url(https://font.googleapis.com/earlyaccess/nanumgothic.css);
 @import url("http://fonts.googleapis.com/earlyaccess/kopubbatang.css");
 @import url("font-awesome.min.css");
+
+body{font-family:'Nanum Gothic';} /* 레이아웃 전체 폰트 지정 */
+
+a, a:link, a:visited{color:#000;text-decoration:none;} /* 링크 색상을 검은색으로 지정, 밑줄 제거 */
+a:hover, a:active{color:#000;} /* 활성화된 링크 색상을 검은색으로 지정 */
+
+img{border:0;} /* 이미지의 외곽선 제거 */
+
+input{outline:none;} /* 입력폼의 외곽선 제거 */
