--- a/page_assets/css/style.css
+++ b/page_assets/css/style.css
@@ -3,6 +3,12 @@
 @import url("http://fonts.googleapis.com/earlyaccess/kopubbatang.css");
 @import url("font-awesome.min.css");
 
+::selection {
+    background: #fff;
+    color: #000;
+    text-shadow: none;
+}
+
 body{font-family:'Nanum Gothic';} /* 레이아웃 전체 폰트 지정 */
 
 a, a:link, a:visited{color:#000;text-decoration:none;} /* 링크 색상을 검은색으로 지정, 밑줄 제거 */
