--- a/page_assets/css/style.css
+++ b/page_assets/css/style.css
@@ -10,13 +10,23 @@
     text-shadow: none;
 }
 
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    position: relative;
+}
+
 /* 레이아웃 전체 */
 body { 
     background-color: #000;
     font-family:'Nanum Gothic';
 }
 
-/* 폰트 설정 */
+/* 폰트 설정
 .ft1 {
     font: italic bold 30px/40px serif, sans-serif, monospace;
     font: color #fff;
@@ -24,7 +34,7 @@ body {
 .ft2 {
     font: 500 20px monospace;
     font: color #fff;
-}
+} */
 
 /* 링크 색상을 검은색으로 지정, 밑줄 제거 */
 a, a:link, a:visited{ 
@@ -34,68 +44,73 @@ a, a:link, a:visited{
 /* 활성화된 링크 색상을 검은색으로 지정 */
 a:hover, a:active{
     color:#fff;
-} 
-
-/* 이미지 외곽선 제거 */
-img{
-    border:0;
-} 
+}
 
 /* 입력폼의 외곽선 제거 */
 input{
     outline:none;
-} 
-
-/* Footer */
-
-#footer {
-    position: relative;
-    height: 2em;
-    line-height: 2em;
-    margin: 0;
-    background: #2b2b2b;
-    color: #999;
-    color: rgba(185, 186, 187, 0.5);
-    overflow: hidden;
 }
 
-    #footer a {
-        color: #999;
-        color: rgba(185, 186, 187, 0.5);
-    }
-
-        #footer a:hover {
-            color: #bbb;
-            color: #b9babb;
-        }
-
-    #footer .actions {
-        position: absolute;
-        left: 1em;
-        top: 0.25em;
-        height: 3em;
-        line-height: 3em;
+/* Main */
+    .main{
+        position: relative;
         margin: 0;
+        overflow: hidden;
     }
-
-        #footer .actions li {
-            font-size: 1.25em;
-            margin: 0;
+        .main.style1{
+            text-align: center;
+            padding: 3em 0 3em 0;
         }
 
-            #footer .actions li a {
-                padding: 0.5em;
-            }
-
-    #footer .menu {
-        position: absolute;
-        right: 2em;
+/* Footer */
+    #footer {
+        position: relative;
         height: 2em;
         line-height: 2em;
         margin: 0;
+        background: #2b2b2b;
+        color: #999;
+        color: rgba(185, 186, 187, 0.5);
+        overflow: hidden;
     }
 
-        #footer .menu li {
-            font-size: 0.9em;
-            color: #F9FFFF;
+        #footer a {
+            color: #999;
+            color: rgba(185, 186, 187, 0.5);
         }
+
+            #footer a:hover {
+                color: #bbb;
+                color: #b9babb;
+            }
+
+        #footer .actions {
+            position: absolute;
+            left: 1em;
+            top: 0.25em;
+            height: 3em;
+            line-height: 3em;
+            margin: 0;
+        }
+
+            #footer .actions li {
+                font-size: 1.25em;
+                margin: 0;
+            }
+
+                #footer .actions li a {
+                    padding: 0.5em;
+                }
+
+        #footer .menu {
+            position: absolute;
+            right: 2em;
+            height: 2em;
+            line-height: 2em;
+            margin: 0;
+        }
+
+            #footer .menu li {
+                font-size: 0.9em;
+                color: #F9FFFF;
+            }
