--- a/page_assets/css/style.css
+++ b/page_assets/css/style.css
@@ -51,6 +51,20 @@ input{
     outline:none;
 }
 
+/* Logo */
+#logo {
+    position: absolute;
+    left: 2em;
+    top: 0.5em;
+    height: 3em;
+    line-height: 3em;
+    letter-spacing: 2px;
+}
+
+    #logo a {
+        font-size: 2em;
+    }
+
 /* Main */
     .main{
         position: relative;
@@ -59,7 +73,7 @@ input{
     }
         .main.style1{
             text-align: center;
-            padding: 3em 0 3em 0;
+            padding: 4em 0 4em 0;
         }
 
 /* Footer */
