--- a/page_assets/css/style.css
+++ b/page_assets/css/style.css
@@ -26,44 +26,40 @@ body {
     font-family:'Nanum Gothic';
 }
 
-/* 폰트 설정
-.ft1 {
-    font: italic bold 30px/40px serif, sans-serif, monospace;
-    font: color #fff;
-}
-.ft2 {
-    font: 500 20px monospace;
-    font: color #fff;
-} */
-
-/* 링크 색상을 검은색으로 지정, 밑줄 제거 */
 a, a:link, a:visited{ 
     color:#fff;text-decoration:none;
 }
 
-/* 활성화된 링크 색상을 검은색으로 지정 */
 a:hover, a:active{
     color:#fff;
 }
 
-/* 입력폼의 외곽선 제거 */
 input{
     outline:none;
 }
 
 /* Logo */
-#logo {
-    position: absolute;
-    left: 2em;
-    top: 0.5em;
-    height: 3em;
-    line-height: 3em;
-    letter-spacing: 2px;
-}
-
-    #logo a {
-        font-size: 2em;
+    #logo {
+        position: absolute;
+        left: 2em;
+        top: 0.5em;
+        height: 3em;
+        line-height: 3em;
+        letter-spacing: 2px;
     }
+
+        #logo a {
+            font-size: 2em;
+        }
+
+/* Menu */
+        #menu {
+            position: absolute;
+            left: 76em;
+            top: 1em;
+            height: 3em;
+            line-height: 3em;
+        }
 
 /* Main */
     .main{
@@ -149,7 +145,7 @@ input{
                     padding: 0.5em;
                 }
 
-        #footer .menu {
+        #footer .copyright {
             position: absolute;
             right: 2em;
             height: 2em;
@@ -157,7 +153,7 @@ input{
             margin: 0;
         }
 
-            #footer .menu li {
+            #footer .copyright li {
                 font-size: 0.9em;
                 color: #999;
             }
