--- a/page_assets/css/style.css
+++ b/page_assets/css/style.css
@@ -55,7 +55,7 @@ input{
 /* Menu */
         #menu {
             position: absolute;
-            left: 76em;
+            right: 2em;
             top: 1em;
             height: 3em;
             line-height: 3em;
