--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -40,7 +40,7 @@ input{
 
 /* Logo */
     #logo {
-        position: absolute;
+        float : left;
         left: 2em;
         top: 0.5em;
         height: 3em;
@@ -53,12 +53,17 @@ input{
         }
 
 /* Menu */
-        #menu {
-            position: absolute;
-            right: 2em;
+        .menuLink {
+            float : right;
             top: 1em;
-            height: 3em;
-            line-height: 3em;
+            right: 3em;
+        }
+
+/* background */
+        #XXX_image{
+            float: center;
+            width: 1100px;
+            height: 500px;
         }
 
 /* Main */
