--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
-@import url("https://font.googleapis.com/earlyaccess/nanumgothic.css");
 @import url("http://fonts.googleapis.com/earlyaccess/kopubbatang.css");
+/* @import url("https://font.googleapis.com/earlyaccess/nanumgothic.css"); */
 @import url("font-awesome.min.css");
 
 /* 선택시 */
@@ -53,11 +53,42 @@ input{
         }
 
 /* Menu */
-        .menuLink {
+        .triggerMenu {
             float : right;
             top: 1em;
             right: 3em;
         }
+
+        #overlay_t {
+            background-color: #000;
+            bottom: 0;
+            left: 0;
+            opacity: 0.5;
+            filter: alpha(opacity = 50);
+            position: fixed;
+            right: 0;
+            top: 0;
+            z-index: 99;
+            display:none;
+        }
+    
+        #popup_layer {
+            margin-bottom:20px;
+            -webkit-box-shadow: 0 0 0 1000px white inset;
+            outline: none;
+            position:absolute;
+            top:260px;
+            left:45%;
+            box-shadow: 0px 1px 20px #333;
+            z-index:100;
+            color: #FFF;
+            display:none;
+        }
+            #popup_layer .popup_list{
+                font-size: 3em;
+                letter-spacing: 2px;
+                line-height: 1.5em;
+            }
 
 /* background */
         #XXX_image{
