setting popup icons(trrigger)

--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -71,15 +71,14 @@ input{
             z-index: 99;
             display:none;
         }
+            
             .triggerPop {
                 float : right;
                 top: 0.5em;
                 right: 2.5em;
+                z-index: 100;
+                display: none;
             }
-                .triggerPop a:hover{
-                    color: #FFF;
-                    color: #FFF;
-                }
     
         #popup_layer {
             margin-bottom:20px;
