--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -39,18 +39,12 @@ input{
 }
 
 /* Logo */
-    #logo {
-        float : left;
+    .home {
         left: 2em;
         top: 0.5em;
-        height: 3em;
-        line-height: 3em;
-        letter-spacing: 2px;
+        width: 0.5em;
+        height: 1em;
     }
-
-        #logo a {
-            font-size: 2em;
-        }
 
 /* Menu */
         .triggerMenu {
@@ -108,8 +102,9 @@ input{
 /* background */
         #XXX_image{
             float: center;
+            left : 7em;
             width: 1100px;
-            height: 500px;
+            height: 405px;
         }
 
 /* Main */
