--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 @import url("http://fonts.googleapis.com/earlyaccess/kopubbatang.css");
-/* @import url("https://font.googleapis.com/earlyaccess/nanumgothic.css"); */
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url("font-awesome.min.css");
 
 /* 선택시 */
@@ -89,6 +89,7 @@ input{
         }
             #popup_layer .popup_list .list_select{
                 color: #999;
+                font-family: 'Roboto', sans-serif;
                 font-size: 3em;
                 letter-spacing: 2px;
                 line-height: 1.6em;
