--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @import url("http://fonts.googleapis.com/earlyaccess/kopubbatang.css");
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
+@import url("https://fonts.googleapis.com/earlyaccess/notosanskr.css");
 @import url("font-awesome.min.css");
 
 /* 선택시 */
@@ -23,7 +24,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 /* 레이아웃 전체 */
 body { 
     background-color: #000;
-    font-family:'Nanum Gothic';
+    font-family:'Roboto', sans-serif;
 }
 
 a, a:link, a:visited{ 
@@ -116,7 +117,7 @@ input{
     }
         .main.style1{
             text-align: center;
-            padding: 4em 0 3em 0;
+            padding: 0 0 7em 0;
         }
             .main.style1 h2 {
                 font-size: 4em;
