--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -2,7 +2,7 @@
 @import url("http://fonts.googleapis.com/earlyaccess/kopubbatang.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
 @import url("https://fonts.googleapis.com/earlyaccess/notosanskr.css");
-@import url("font-awesome.min.css");
+
 
 /* 선택시 */
 ::selection { 
@@ -24,11 +24,15 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 /* 레이아웃 전체 */
 body { 
     background-color: #000;
-    font-family:'Roboto', sans-serif;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 a, a:link, a:visited{ 
-    color:#fff;text-decoration:none;
+    color:#fff;
+    text-decoration:none;
 }
 
 a:hover, a:active{
@@ -39,19 +43,37 @@ input{
     outline:none;
 }
 
+/* header */
+    #header{
+        background-color: #000;
+    }
+
 /* Logo */
-    .home {
+    #header .home {
         left: 2em;
         top: 0.5em;
         width: 0.5em;
         height: 1em;
     }
+        #header .home .img-responsive{
+            width: 15.5%;
+            height: 6%;
+        }
 
 /* Menu */
         .triggerMenu {
             float : right;
             top: 1em;
             right: 3em;
+            z-index: 100;
+        }
+
+        .triggerPop {
+            float : right;
+            top: 0.5em;
+            right: 2.5em;
+            z-index: 100;
+            display: none;
         }
 
         #overlay_t {
@@ -65,35 +87,27 @@ input{
             top: 0;
             z-index: 99;
             display:none;
-        }
-            
-            .triggerPop {
-                float : right;
-                top: 0.5em;
-                right: 2.5em;
-                z-index: 100;
-                display: none;
-            }
+        }   
     
         #popup_layer {
-            margin-bottom:20px;
             -webkit-box-shadow: 0 0 0 1000px white inset;
             outline: none;
             position:absolute;
-            top:260px;
-            left:45%;
-            box-shadow: 0px 1px 20px #333;
+            box-shadow: 0px 0px 0px #333;
             z-index:100;
             color: #999;
             display:none;
             text-align: center;
         }
+            #popup_layer .container{
+                display: flex;
+                justify-content: center;
+            }
+
             #popup_layer .popup_list .list_select{
                 color: #999;
                 font-family: 'Roboto', sans-serif;
-                font-size: 3em;
-                letter-spacing: 2px;
-                line-height: 1.6em;
+                font-size: 3vw;
             }
 
             #popup_layer .popup_list a:hover{
@@ -101,12 +115,16 @@ input{
                 color: #FFF;
             }
 
-/* background */
+/* Main background */
+    #main-page{
+        background-color: #000;
+        width: 100%;
+        height: 100%;
+    }
+
+/* Main Image */
         #XXX_image{
-            float: center;
-            left : 7em;
-            width: 1100px;
-            height: 405px;
+            position: relative;
         }
 
 /* Main */
@@ -117,12 +135,17 @@ input{
     }
         .main.style1{
             text-align: center;
-            padding: 0 0 7em 0;
+            padding: 0 0 0.35em 0;
         }
             .main.style1 h2 {
                 font-size: 4em;
                 line-height: 1em;
                 letter-spacing: -4px;
+            }
+
+            .main-img{
+                width: 70%;
+                height: 40%;
             }
 
 /* Contact */
