--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -24,8 +24,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 /* 레이아웃 전체 */
 body { 
     background-color: #000;
-    width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -43,22 +41,28 @@ input{
     outline:none;
 }
 
-/* header */
-    #header{
-        background-color: #000;
-    }
+/* whole */
+#page{
+    background-color: #000;
+    width: 100%;
+    height: 100%;
+}
+
+#header{
+    background-color: #000;
+}
 
 /* Logo */
-    #header .home {
-        left: 2em;
-        top: 0.5em;
-        width: 0.5em;
-        height: 1em;
+#header .home {
+    left: 2em;
+    top: 0.5em;
+    width: 0.5em;
+    height: 1em;
+}
+    #header .home .img-responsive{
+        width: 15.5%;
+        height: 6%;
     }
-        #header .home .img-responsive{
-            width: 15.5%;
-            height: 6%;
-        }
 
 /* Menu */
         .triggerMenu {
@@ -114,13 +118,6 @@ input{
                 color: #FFF;
                 color: #FFF;
             }
-
-/* Main background */
-    #main-page{
-        background-color: #000;
-        width: 100%;
-        height: 100%;
-    }
 
 /* Main Image */
         #XXX_image{
@@ -228,3 +225,19 @@ input{
                 font-size: 0.9em;
                 color: #999;
             }
+
+/* Shop Page */
+
+    #page-head{
+        position: relative;
+        margin: 0;
+        overflow: hidden;
+    }
+        .season{
+            position: relative;
+            top: 1em;
+            left: 3em;
+            word-spacing: 3em;
+            color: #FFF;
+
+        }
