--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -6,10 +6,11 @@
 
 /* 선택시 */
 ::selection { 
-    background: #fff;
-    color: #000;
+    background: #999;
+    color: #999;
     text-shadow: none;
 }
+
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
@@ -19,14 +20,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font: inherit;
     vertical-align: baseline;
     position: relative;
+    background-color: #000;
 }
 
-/* 레이아웃 전체 */
-body { 
-    background-color: #000;
-    margin: 0;
-    padding: 0;
-}
+
+/* 레이아웃 기본 값 */
 
 a, a:link, a:visited{ 
     color:#fff;
@@ -55,7 +53,6 @@ input{
 /* Logo */
 #header .home {
     left: 2em;
-    top: 0.5em;
     width: 0.5em;
     height: 1em;
 }
@@ -65,18 +62,20 @@ input{
     }
 
 /* Menu */
-        .triggerMenu {
+        #header .triggerMenu {
             float : right;
             top: 1em;
             right: 3em;
             z-index: 100;
+            size: 10vw;
         }
 
-        .triggerPop {
+        #header .triggerPop {
             float : right;
             top: 0.5em;
             right: 2.5em;
             z-index: 100;
+            size: 10vw;
             display: none;
         }
 
@@ -94,21 +93,22 @@ input{
         }   
     
         #popup_layer {
-            -webkit-box-shadow: 0 0 0 1000px white inset;
             outline: none;
             position:absolute;
-            box-shadow: 0px 0px 0px #333;
-            z-index:100;
+            opacity: 0.5;
+            filter: alpha(opacity = 50);
             color: #999;
+            z-index:100;
             display:none;
             text-align: center;
         }
-            #popup_layer .container{
-                display: flex;
-                justify-content: center;
+            #popup_layer .popup_list{
+               left: 50vw;
+               bottom: 0vw;
             }
 
-            #popup_layer .popup_list .list_select{
+            #popup_layer li .list_select{
+                background-color: #000;
                 color: #999;
                 font-family: 'Roboto', sans-serif;
                 font-size: 3vw;
@@ -140,20 +140,21 @@ input{
                 letter-spacing: -4px;
             }
 
-            .main-img{
+            .img-responsive{
                 width: 70%;
                 height: 40%;
             }
 
 /* Contact */
     #contact-icons{
-        position: relative;
+        position: bottom;
         height: 3em;
         line-height: 2em;
         margin: 0em;
-        background: #000;
+        background-color: #000;
         color: #fff;
         color: #fff;
+        font-size: 1vw;
         overflow: hidden;
     }
         #contact-icons a{
@@ -166,6 +167,7 @@ input{
             }
         #contact-icons .contact{
             position: absolute;
+            background-color: #000;
             left: 1em;
             top: 0.25em;
             height: 3em;
@@ -179,7 +181,7 @@ input{
         height: 2em;
         line-height: 2em;
         margin: 0;
-        background: #2b2b2b;
+        background-color: #2b2b2b;
         color: #000;
         color: rgba(185, 186, 187, 0.5);
         overflow: hidden;
@@ -215,14 +217,15 @@ input{
 
         #footer .copyright {
             position: absolute;
-            right: 2em;
+            right: 2vw;
             height: 2em;
             line-height: 2em;
             margin: 0;
         }
 
             #footer .copyright li {
-                font-size: 0.9em;
+                font-size: 0.9vw;
+                background-color: #2b2b2b;
                 color: #999;
             }
 
