--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -40,29 +40,35 @@ input{
 }
 
 /* whole */
-#page{
+.page{
     background-color: #000;
     width: 100%;
     height: 100%;
 }
 
-#header{
+.header{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
     background-color: #000;
+    padding: 5px;
+    z-index: 101;
 }
 
+
 /* Logo */
-#header .home {
+#XXXheader .home {
     left: 2em;
     width: 0.5em;
     height: 1em;
 }
-    #header .home .img-responsive{
+    #XXXheader .home .img-responsive{
         width: 15.5%;
         height: 6%;
     }
 
-/* Menu */
-        #header .triggerMenu {
+/* Top Menu */
+        #XXXheader .triggerMenu {
             float : right;
             top: 1em;
             right: 3em;
@@ -70,7 +76,7 @@ input{
             size: 10vw;
         }
 
-        #header .triggerPop {
+        #XXXheader .triggerPop {
             float : right;
             top: 0.5em;
             right: 2.5em;
@@ -107,7 +113,7 @@ input{
                bottom: 0vw;
             }
 
-            #popup_layer li .list_select{
+            #popup_layer li a{
                 background-color: #000;
                 color: #999;
                 font-family: 'Roboto', sans-serif;
@@ -154,7 +160,7 @@ input{
         background-color: #000;
         color: #fff;
         color: #fff;
-        font-size: 1vw;
+        font-size: 1.2vw;
         overflow: hidden;
     }
         #contact-icons a{
@@ -165,7 +171,7 @@ input{
                 color: #bbb;
                 color: #b9babb;
             }
-        #contact-icons .contact{
+        #contact-icons #float-icons{
             position: absolute;
             background-color: #000;
             left: 1em;
@@ -181,6 +187,7 @@ input{
         height: 2em;
         line-height: 2em;
         margin: 0;
+        padding: 0 0 0 0;
         background-color: #2b2b2b;
         color: #000;
         color: rgba(185, 186, 187, 0.5);
@@ -231,7 +238,7 @@ input{
 
 /* Shop Page */
 
-    #page-head{
+    .page-head{
         position: relative;
         margin: 0;
         overflow: hidden;
