--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -20,7 +20,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font: inherit;
     vertical-align: baseline;
     position: relative;
-    background-color: #000;
 }
 
 
@@ -44,6 +43,7 @@ input{
     background-color: #000;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .header{
@@ -58,32 +58,40 @@ input{
 
 /* Logo */
 #XXXheader .home {
-    left: 2em;
-    width: 0.5em;
-    height: 1em;
+    left: 2vw;
+    width: 0.5vw;
+    height: 1vw;
 }
-    #XXXheader .home .img-responsive{
-        width: 15.5%;
-        height: 6%;
+    .home .img-responsive{
+        width: 10vw;
+        height: 8vw;
     }
 
 /* Top Menu */
         #XXXheader .triggerMenu {
             float : right;
-            top: 1em;
-            right: 3em;
+            top: 1vw;
+            right: 3vw;
             z-index: 100;
             size: 10vw;
         }
+            .triggerMenu .img-responsive{
+                width: 4.8vw;
+                height: 4.8vw;
+            }
 
         #XXXheader .triggerPop {
             float : right;
-            top: 0.5em;
-            right: 2.5em;
+            top: 0.5vw;
+            right: 2.5vw;
             z-index: 100;
             size: 10vw;
             display: none;
         }
+            .triggerPop .img-responsive{
+                width: 5vw;
+                height: 5vw;
+            }
 
         #overlay_t {
             background-color: #000;
@@ -114,7 +122,6 @@ input{
             }
 
             #popup_layer li a{
-                background-color: #000;
                 color: #999;
                 font-family: 'Roboto', sans-serif;
                 font-size: 3vw;
@@ -128,6 +135,7 @@ input{
 /* Main Image */
         #XXX_image{
             position: relative;
+            margin: 3em 0 3em 0;
         }
 
 /* Main */
@@ -151,9 +159,26 @@ input{
                 height: 40%;
             }
 
+/* XXX-info */
+    .XXX-info{
+        margin: 4em 0 0.2em 3.5vw;
+        color: #FFF;
+    }
+        .XXX-info .about{
+            bottom: 1.2em;
+            font-size: 1.2em;
+            font-style: italic;
+            opacity: 0.6;
+        }
+
+        .XXX-info .about-content{
+            font-size: 0.8em;
+        }
+
+
 /* Contact */
     #contact-icons{
-        position: bottom;
+        position: relative;
         height: 3em;
         line-height: 2em;
         margin: 0em;
@@ -173,7 +198,7 @@ input{
             }
         #contact-icons #float-icons{
             position: absolute;
-            background-color: #000;
+            /* background-color: #000; */
             left: 1em;
             top: 0.25em;
             height: 3em;
@@ -245,9 +270,23 @@ input{
     }
         .season{
             position: relative;
-            top: 1em;
-            left: 3em;
-            word-spacing: 3em;
+            left: 3vw;
+            word-spacing: 3vw;
+            font-size: 1.2vw;
             color: #FFF;
-
         }
+
+    /* shop items view */
+    .shop-items{
+        position: relative;
+        padding: 3.5vw;
+        background-color: #000;
+        color: #999;
+    }
+        .shop-items li .img-responsive{
+            width: 40vw;
+            height: 30vw;
+        }
+
+
+
