add dropbtn img event

--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -349,14 +349,14 @@ input{
     }
 
     /* shop items view */
-    .shop-items{
+    #shop-items{
         position: relative;
         padding: 3.5vw;
         padding: 3.5vw 3.5vw 3.5vw 30vw;
         background-color: #000;
         color: #999;
     }
-        .shop-items li .img-responsive{
+        #shop-items li .img-responsive{
             width: 20vw;
             height: 16vw;
         }
