--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -271,24 +271,24 @@ input{
 
 /* header drop-down*/
     .season{
-        position: relative;
-        display: inline-block;
-        float: right;
-        top: 3vw;
-        right: 2vw;
+        position:relative;
+        z-index: 2;
+        width: 2vw;
         word-spacing: 3vw;
-        font-size: 1.2vw;
+        font-size: 0.9vw;
+        margin: -5vw 0 0 -25vw;
         color: #FFF;
     }
 
     .dropdown-season {
         display: none;
         position: absolute;
-        right: 0;
+        padding: 0 0 0 0;
         background-color: #f9f9f9;
-        min-width: 1.6vw;
+        /* min-width: 1.5vw; */
+        width: 11vw;
+        font-size: 1.1vw;
         box-shadow: 0vw 3vw 6vw 0vw rgba(0,0,0,0.2);
-        z-index: 1;
     }
     
     .dropdown-season a {
@@ -316,8 +316,10 @@ input{
     .dropbtn {
         background-color: #2b2b2b;
         color: #FFF;
-        padding: 1vw;
+        padding: 0.7vw 0.5vw 0.7vw 0.5vw;
         font-size: 1.2vw;
+        width: 11vw;
+        z-index: 3;
         border: none;
         cursor: pointer;
     }
