remove unused lib

--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -146,6 +146,7 @@ input{
             #popup_layer .popup_list a:hover{
                 color: #FFF;
                 color: #FFF;
+                opacity: 1;
             }
 
 /* Main Image */
