add basic sign-up  settings

--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -459,6 +459,12 @@ input{
             .login-submit a :hover{
                 opacity: 1;
             }
+
+    
+    /* Sign-up */
+    .form-group > label{
+        color: #FFF;
+    }
         
     
     #set-id{
