--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -460,26 +460,37 @@ input{
                 opacity: 1;
             }
 
+            #set-id{
+                position: relative;
+                margin: 1vw 0 0 42vw;
+                font-size: 1vw;
+            }
+            #set-id li a{
+                color: #7D7E7F;
+            }
+                #set-id .find-create :hover{
+                    color: #FFF;
+                }
     
     /* Sign-up */
+    .center-block{
+        position: relative;
+        width: 60vw;
+        padding: 3vw 0 0 0;
+        margin: 0 0 0 24vw;
+    }
+
     .form-group > label{
         color: #FFF;
     }
-        
-    
-    #set-id{
-        position: relative;
-        margin: 1vw 0 0 42vw;
-        font-size: 1vw;
-    }
-    #set-id li a{
-        color: #7D7E7F;
-    }
-        #set-id .find-create :hover{
-            color: #FFF;
-        }
 
-/* carousel slide */
+    #result-btn{
+        margin: 3vw 2vw 0 0;
+    }
+    
+
+
+/* Lookbook (carousel slide) */
 .carousel-inner img {
     width: 80vw;
     height: 35vw;
