add Personal information collection/usage agreement

--- a/page-assets/css/style.css
+++ b/page-assets/css/style.css
@@ -488,7 +488,7 @@ input{
         margin: 3vw 2vw 0 0;
     }
 
-    #terms-of-service{
+    #agreement{
         text-align: justify;
         height: 14vw;
     }
